# ktnef

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5TnefConfig.cmake.in  KPimTnefConfig.cmake.in  Mainpage.dox  README.md  ktnef.categories  ktnef.renamecategories  metainfo.yaml
autotests/: CMakeLists.txt  mapi_attach_data_obj.tnef  parsertest.cpp  parsertest.h
cmake/ecmcopy/: ECMInstalledLibraryCheck.cmake
po/ar/: libktnef6.po
po/ast/: libktnef5.po  libktnef6.po
po/be/: libktnef6.po
po/bs/: libktnef5.po  libktnef6.po
po/ca/: libktnef6.po
po/ca@valencia/: libktnef5.po  libktnef6.po
po/cs/: libktnef5.po  libktnef6.po
po/da/: libktnef6.po
po/de/: libktnef5.po  libktnef6.po
po/el/: libktnef6.po
po/en_GB/: libktnef5.po  libktnef6.po
po/eo/: libktnef5.po  libktnef6.po
po/es/: libktnef5.po  libktnef6.po
po/et/: libktnef5.po  libktnef6.po
po/eu/: libktnef5.po  libktnef6.po
po/fi/: libktnef5.po  libktnef6.po
po/fr/: libktnef5.po  libktnef6.po
po/ga/: libktnef5.po  libktnef6.po
po/gl/: libktnef5.po  libktnef6.po
po/he/: libktnef6.po
po/hi/: libktnef5.po  libktnef6.po
po/hne/: libktnef6.po
po/hu/: libktnef5.po  libktnef6.po
po/ia/: libktnef5.po  libktnef6.po
po/it/: libktnef6.po
po/ja/: libktnef5.po  libktnef6.po
po/ka/: libktnef5.po  libktnef6.po
po/kk/: libktnef6.po
po/km/: libktnef5.po  libktnef6.po
po/ko/: libktnef6.po
po/lt/: libktnef5.po  libktnef6.po
po/lv/: libktnef5.po  libktnef6.po
po/mai/: libktnef5.po  libktnef6.po
po/mr/: libktnef5.po  libktnef6.po
po/nb/: libktnef5.po  libktnef6.po
po/nds/: libktnef6.po
po/nl/: libktnef6.po
po/nn/: libktnef5.po  libktnef6.po
po/pa/: libktnef5.po  libktnef6.po
po/pl/: libktnef5.po  libktnef6.po
po/pt/: libktnef5.po  libktnef6.po
po/pt_BR/: libktnef5.po  libktnef6.po
po/ro/: libktnef6.po
po/ru/: libktnef6.po
po/sa/: libktnef6.po
po/se/: libktnef5.po  libktnef6.po
po/sk/: libktnef5.po  libktnef6.po
po/sl/: libktnef5.po  libktnef6.po
po/sq/: libktnef5.po  libktnef6.po
po/sr/: libktnef5.po  libktnef6.po
po/sr@ijekavian/: libktnef5.po  libktnef6.po
po/sr@ijekavianlatin/: libktnef5.po  libktnef6.po
po/sr@latin/: libktnef5.po  libktnef6.po
po/sv/: libktnef6.po
po/tr/: libktnef5.po  libktnef6.po
po/ug/: libktnef5.po  libktnef6.po
po/uk/: libktnef6.po
po/zh_CN/: libktnef5.po  libktnef6.po
po/zh_TW/: libktnef5.po  libktnef6.po
src/: CMakeLists.txt  Messages.sh  formatter.cpp  formatter.h  ktnef-index.qdoc  ktnef.qdoc  ktnef.qdocconf  ktnef_debug.cpp  ktnef_debug.h  ktnefattach.cpp  ktnefattach.h  ktnefdefs.h  ktnefmessage.cpp  ktnefmessage.h  ktnefparser.cpp  ktnefparser.h  ktnefproperty.cpp  ktnefproperty.h  ktnefpropertyset.cpp  ktnefpropertyset.h  ktnefwriter.cpp  ktnefwriter.h  lzfu.cpp  lzfu.h  mapi.cpp  mapi.h
